@@ -5,8 +5,8 @@ Object is a Node Set :
 Set contains 1 nodes:
 1  ELEMENT ITEM
     ATTRIBUTE monto
-      TEXT compact
+      TEXT
         content=50.12
     ATTRIBUTE divisa
-      TEXT compact
+      TEXT
         content=DOL
