@@ -2,5 +2,5 @@ Object is a Node Set :
 Set contains 1 nodes:
 1  ELEMENT o:o
     ATTRIBUTE id
-      TEXT compact
+      TEXT
         content=bar
